--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "moment": "^2.29.4",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "underscore": "^1.13.4"
   },
   "dependencies": {
     "cypress": "^10.3.1",
