--- a/.github/workflows/chrome-ui-tests.yml
+++ b/.github/workflows/chrome-ui-tests.yml
@@ -10,14 +10,38 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   chrome-ui-tests:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    container: cypress/browsers:node12.18.3-chrome87-ff82
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      fail-fast: false
+      matrix:
+        # run copies of the current job in parallel
+        containers: [1]
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Ping API
+        uses: Leocardoso94/is-my-site-up@v1.2
+        with:
+          site: 'https://samuraibs-api-fernanda.herokuapp.com'
 
-      # Runs a single command using the runners shell
-      - name: List files project
-        run: ls -l
+      - name: 'UI Tests - Chrome'
+        uses: cypress-io/github-action@v4
+        with:
+          # we have already installed all dependencies above
+          install-command: yarn install
+          wait-on: 'https://samuraibs-web-fernanda.herokuapp.com'
+          wait-on-timeout: 120
+          browser: chrome
+          record: true
+          parallel: true
+          group: 'UI - Chrome'
+          spec: cypress/e2e/*
+        env:
+          TZ: America/Sao_Paulo
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # Recommended: pass the GitHub token lets this action correctly
+          # determine the unique run id necessary to re-run the checks
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
